--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -526,7 +526,7 @@
 <h3 class="modal-title">Allowable FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
 </div>
 </section>
 
@@ -535,7 +535,7 @@
 <h3 class="modal-title">Annual FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
 </div>
 </section>
 
@@ -544,7 +544,7 @@
 <h3 class="modal-title">Annuitant</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
 </div>
 </section>
 
@@ -553,7 +553,7 @@
 <h3 class="modal-title">Common-law partner</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
 </div>
 </section>
 
@@ -562,7 +562,7 @@
 <h3 class="modal-title">Designated amounts</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
 </div>
 </section>
 
@@ -571,7 +571,7 @@
 <h3 class="modal-title">Excess FHSA amount</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
 </div>
 </section>
 
@@ -580,7 +580,7 @@
 <h3 class="modal-title">Exempt period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
 </div>
 </section>
 
@@ -589,7 +589,7 @@
 <h3 class="modal-title">Fair market value (FMV)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
 </div>
 </section>
 
@@ -598,7 +598,7 @@
 <h3 class="modal-title">FHSA carryforward</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
 </div>
 </section>
 
@@ -607,7 +607,7 @@
 <h3 class="modal-title">FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
 </div>
 </section>
 
@@ -616,7 +616,7 @@
 <h3 class="modal-title">FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
 </div>
 </section>
 
@@ -625,7 +625,7 @@
 <h3 class="modal-title">First-time home buyer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
 </div>
 </section>
 
@@ -634,7 +634,7 @@
 <h3 class="modal-title">Holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
 </div>
 </section>
 
@@ -643,7 +643,7 @@
 <h3 class="modal-title">Issuer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
 </div>
 </section>
 
@@ -652,7 +652,7 @@
 <h3 class="modal-title">Lifetime FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
 </div>
 </section>
 
@@ -661,7 +661,7 @@
 <h3 class="modal-title">Maximum participation period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
 </div>
 </section>
 
@@ -670,7 +670,7 @@
 <h3 class="modal-title">Non-qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
 </div>
 </section>
 
@@ -679,7 +679,7 @@
 <h3 class="modal-title">Property</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
 </div>
 </section>
 
@@ -688,7 +688,7 @@
 <h3 class="modal-title">Qualified donee</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
 </div>
 </section>
 
@@ -706,7 +706,7 @@
 <h3 class="modal-title">Qualifying home</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
 </div>
 </section>
 
@@ -724,7 +724,7 @@
 <h3 class="modal-title">Qualifying withdrawal</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
 </div>
 </section>
 
@@ -733,7 +733,7 @@
 <h3 class="modal-title">Registered retirement income fund (RRIF)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
 </div>
 </section>
 
@@ -742,7 +742,7 @@
 <h3 class="modal-title">Registered retirement saving plan (RRSP)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
 </div>
 </section>
 
@@ -751,7 +751,7 @@
 <h3 class="modal-title">Spouse</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
 </div>
 </section>
 
@@ -760,7 +760,7 @@
 <h3 class="modal-title">Successor holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
 </div>
 </section>
 
@@ -769,7 +769,7 @@
 <h3 class="modal-title">Survivor</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
 </div>
 </section>
 
@@ -778,7 +778,7 @@
 <h3 class="modal-title">Unused FHSA contributions</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
 </div>
 </section>
 
@@ -787,7 +787,7 @@
 <h3 class="modal-title">Unused FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
 </div>
 </section>
 
@@ -796,7 +796,7 @@
 <h3 class="modal-title">Unused RRSP deduction room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
 </div>
 </section>
 
