--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -307,7 +307,7 @@
 
 	
     <details>
-      <summary>Calculation for 2023 combined tax rate on taxable income of $49,000</summary>
+      <summary>Example 1 - Calculation for 2023 combined tax rate on taxable income of $49,000</summary>
       <p>In <strong>2023</strong>, Ellis lives in <strong>Ontario</strong> and has a taxable income of <strong>$49,000</strong>. Ellis’ tax calculation would be as follows:</p>
       <p class="h3">Federal tax</p>
 	    
@@ -357,7 +357,7 @@
 
 	  
     <details>
-      <summary>Calculation for 2023 combined tax rate on taxable income of $76,000</summary>
+      <summary>Example 2 - Calculation for 2023 combined tax rate on taxable income of $76,000</summary>
       <p>In <strong>2023</strong>, Quinn lives in <strong>Saskatchewan</strong> and has a taxable income of <strong>$76,000</strong>. Quinn’s tax calculation would be as follows:</p>
   <p class="h3">Federal tax</p>
 	      <p>The first $53,359 is taxed at 15% which is the first tax threshold ($53,359 x 0.15 = $8,003.85). This is the tax amount to add in the calcualtion.</p>
@@ -409,7 +409,7 @@
 
 	
     <details>
-      <summary>Calculation for 2023 combined tax rate on taxable income of $93,000</summary>
+      <summary>Example 3 - Calculation for 2023 combined tax rate on taxable income of $93,000</summary>
       <p>In <strong>2023</strong>, Amari lives in <strong>British Columbia</strong> and has a taxable income of <strong>$93,000</strong>. Amari’s tax calculation would be as follows:</p>
   <p class="h3">Federal tax</p>
 		      <p>The first $53,359 is taxed at 15% which is the first tax threshold ($53,359 x 0.15 = $8,003.85). This is the tax amount to add in the calcualtion.</p>
