Changed relative ajax link path to absolute

--- a/fhsa/v4/close.html
+++ b/fhsa/v4/close.html
@@ -229,7 +229,7 @@
 <h3 class="modal-title">Allowable FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
 </div>
 </section>
 
@@ -238,7 +238,7 @@
 <h3 class="modal-title">Annual FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
 </div>
 </section>
 
@@ -247,7 +247,7 @@
 <h3 class="modal-title">Annuitant</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
 </div>
 </section>
 
@@ -256,7 +256,7 @@
 <h3 class="modal-title">Common-law partner</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
 </div>
 </section>
 
@@ -265,7 +265,7 @@
 <h3 class="modal-title">Designated amounts</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
 </div>
 </section>
 
@@ -274,7 +274,7 @@
 <h3 class="modal-title">Excess FHSA amount</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
 </div>
 </section>
 
@@ -283,7 +283,7 @@
 <h3 class="modal-title">Exempt period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
 </div>
 </section>
 
@@ -292,7 +292,7 @@
 <h3 class="modal-title">Fair market value (FMV)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
 </div>
 </section>
 
@@ -301,7 +301,7 @@
 <h3 class="modal-title">FHSA carryforward</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
 </div>
 </section>
 
@@ -310,7 +310,7 @@
 <h3 class="modal-title">FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
 </div>
 </section>
 
@@ -319,7 +319,7 @@
 <h3 class="modal-title">FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
 </div>
 </section>
 
@@ -328,7 +328,7 @@
 <h3 class="modal-title">First-time home buyer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
 </div>
 </section>
 
@@ -337,7 +337,7 @@
 <h3 class="modal-title">Holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
 </div>
 </section>
 
@@ -346,7 +346,7 @@
 <h3 class="modal-title">Issuer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
 </div>
 </section>
 
@@ -355,7 +355,7 @@
 <h3 class="modal-title">Lifetime FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
 </div>
 </section>
 
@@ -364,7 +364,7 @@
 <h3 class="modal-title">Maximum participation period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
 </div>
 </section>
 
@@ -373,7 +373,7 @@
 <h3 class="modal-title">Non-qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
 </div>
 </section>
 
@@ -382,7 +382,7 @@
 <h3 class="modal-title">Property</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
 </div>
 </section>
 
@@ -391,7 +391,7 @@
 <h3 class="modal-title">Qualified donee</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
 </div>
 </section>
 
@@ -400,7 +400,7 @@
 <h3 class="modal-title">Qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualinv"></section>
 </div>
 </section>
 
@@ -409,7 +409,7 @@
 <h3 class="modal-title">Qualifying home</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
 </div>
 </section>
 
@@ -418,7 +418,7 @@
 <h3 class="modal-title">Qualifying individual</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualindividual"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualindividual"></section>
 </div>
 </section>
 
@@ -427,7 +427,7 @@
 <h3 class="modal-title">Qualifying withdrawal</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
 </div>
 </section>
 
@@ -436,7 +436,7 @@
 <h3 class="modal-title">Registered retirement income fund (RRIF)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
 </div>
 </section>
 
@@ -445,7 +445,7 @@
 <h3 class="modal-title">Registered retirement saving plan (RRSP)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
 </div>
 </section>
 
@@ -454,7 +454,7 @@
 <h3 class="modal-title">Spouse</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
 </div>
 </section>
 
@@ -463,7 +463,7 @@
 <h3 class="modal-title">Successor holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
 </div>
 </section>
 
@@ -472,7 +472,7 @@
 <h3 class="modal-title">Survivor</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
 </div>
 </section>
 
@@ -481,7 +481,7 @@
 <h3 class="modal-title">Unused FHSA contributions</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
 </div>
 </section>
 
@@ -490,7 +490,7 @@
 <h3 class="modal-title">Unused FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
 </div>
 </section>
 
@@ -499,7 +499,7 @@
 <h3 class="modal-title">Unused RRSP deduction room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
 </div>
 </section>
 
