--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -306,13 +306,13 @@
 
             <h2 id="h-1">Who can open an FHSA</h2>
             <p>To open an FHSA, you must be a qualifying individual by meeting the criteria below.</p>
-            <p>You must meet <strong>all</strong> of the following requirements when you open your account:</p>
+            <p>You must meet <strong>all</strong> of the following requirements when you open your account.</p>
  <section class="gc-nav-section experimental provisional">
 	  
  <section>
 	 <section>
 		 <h3>You are a first-time home buyer</h3>
-		 <p>You are a first-time home buyer for the purpose of opening an FHSA if</p>
+		 <p>You are a first-time home buyer for the purpose of opening an FHSA if:</p>
 		 <fieldset>
                   <ul class="checkbox-zebra gc-chckbxrdio">
 
@@ -369,6 +369,23 @@
                                        in the previous 4 calendar years </li></ul>
 </label>
                 </li>
+		  </ul>
+		 </fieldset>
+
+		 <div class="alert alert-info hidden provisional" id="action-not-qualify-msg">
+                    <h3>You need all of the above to make a qualifying withdrawal</h3>
+			  <p>If you do not meet all of the conditions above you would not be a qualifying individual and could not open an FHSA.</p>
+                  </div>
+                  <div class="alert alert-success hidden provisional" id="action-qualify-msg">
+                    <p>Based on your selections above:</p>
+			  <h3>You may qualify to open an FHSA</h3>
+			  <p>If you meet the conditions above you would be a qualifying individual and can open an FHSA.</p>
+                  </div>
+
+		 <h3>Additional criteria for opening an FHSA account</h3>
+		 <fieldset>
+                  <ul class="checkbox-zebra gc-chckbxrdio">
+
 			  
                      <li class="checkbox">
                         <input type="checkbox" id="eg1" name="action-checkbox">
