--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -136,7 +136,7 @@
         </div>
     </section>
     <section class="col-md-4 mrgn-bttm-sm">
-        <div data-ajax-replace="/content/dam/cra-arc/includes/social-media.txt#social-media-en">
+        <div data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/includes/social-media.txt#social-media-en">
         </div>
     </section>
 </div>
